--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -7,6 +7,7 @@
     "union.hoist": "Hoist",
     "stanley": "Stanley",
     "stanley.lane-one": "Lane One",
+    "stanley.checklist": "Checklist",
     "design": "Design",
     "design.colors": "Color System",
     "design.icons": "Material Icons",
